separate terminal output offset implementation